2014-09-26  Peter Stephenson  <p.stephenson@samsung.com>

	* Wieland Hoffmann: 33252: Completion/Unix/Command/_notmuch:
	complete more subcommands.

2014-09-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* users/19143: Src/glob.c: **/*(odonT) didn't work because
	the trailing slash wasn't properly ignored.

2014-09-25  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: NEWS: tweak last change.

2014-09-24  Oliver Kiddle  <opk@zsh.org>

	* 33238: Completion/Unix/Command/_quilt: correct return values

2014-09-24  Peter Stephenson  <p.stephenson@samsung.com>

	* Eric Cook: 33224: Completion/Linux/Command/_btrfs: complete
	directory as second argument.

2014-09-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 33223: Completion/Base/Utility/_call_program: discard stderr
	except when _complete_debug is in progress.

2014-09-23  Øystein Walle  <oystwa@gmail.com>

	* 33179: Completion/Unix/Command/_git: _git: updates for Git 2.0.0

	* 33176: Completion/Unix/Command/_git: _git: Add missing --list to
	git-tag

	* 33178: Completion/Unix/Command/_git: _git: updates for Git 2.1.0

	* 33177: Completion/Unix/Command/_git: _git: fix typo in git-apply

	* 33180: Completion/Unix/Command/_git: _git: add missing --3way
	option

2014-09-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: NEWS: more minor tweaks.

	* unposted: NEWS: mention numeric output with underscore separators.

	* unposted: NEWS: mention new
	/usr/local/share/zsh/site-functions default.

2014-09-23  Peter Stephenson  <p.stephenson@samsung.com>

	* 33221 (including 33173 from Anthony Heading):
	Completion/Unix/Command/_perforce: complete directories
	when handling unmaintained files and rationalise code that does
	this.

	* unposted: Completion/Unix/Command/_dvi: add dvipdf to list of
	commands.

	* Richard Hartmann: 33218: Completion/X/Command/_mplayer:
	complete m4a files.

2014-09-22  Oliver Kiddle  <opk@zsh.org>

	* 33198: Completion/Unix/Command/_augeas: new augtool completion
